# Students_manager

./: CMakeLists.txt  db_students  main.cpp  mainwindow.cpp  mainwindow.h
